--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,239 +1,287 @@
-body {
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  font-size: 18px;
-  line-height: 34px;
-  color: #777;
-  background: url("../images/concrete_seamless.png");
-}
-
 * {
   box-sizing: border-box;
 }
 
-/* general */
+html {
+  position: relative;
+  min-height: 100%;
+  font-size: 16px;
+  text-align: justify;
+  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+  color: #777777;
+}
 
+body {
+  background-image: url("../images/concrete.png");
+  display: flex;
+  flex-direction: column;
+}
+
+h1, h2{
+  font-family: 'Georgia', Times, Times New Roman, serif;
+  font-size: 35px;
+  font-weight: bold;  
+  color: #4aaaa5;
+  margin: 0px;
+}
+
+h2 {
+  font-size: 23px;
+}
 .container {
-  width: 100%;
+  width: 90%;
   max-width: 960px;
   margin: 0 auto;
-  clear: both;
 }
 
-h1,
-h2,
-h3,
-p {
-  margin-bottom: 20px;
+.header-wrap {
+  background: white;
+  min-height: 100px;
+  border-bottom: solid #cccccc 2px;
 }
 
-p:last-child {
-  margin-bottom: 0;
+.header-wrap>.container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background: white;
 }
 
-h1,
-h2,
-h3 {
-  font-family: Georgia, Times, "Times New Roman", serif;
-  font-weight: 700;
-  color: #4aaaa5;
-}
-
-h1 {
-  padding-bottom: 20px;
+.header-name-box {
+  height: 98px;
+  padding: 0px 30px 0px 30px;
+  margin: 0;
+  background-color: #4aaaa5;
+  font-family: 'Georgia', Times, Times New Roman, serif;
   font-size: 30px;
-  line-height: 49px;
-  border-bottom: 3px solid #ddd;
-}
-
-h2,
-h3 {
-  font-size: 22px;
-}
-
-/* header */
-
-#masthead {
-  position: fixed;
-  z-index: 99;
-  width: 100%;
-  margin: 0 0 30px;
-  overflow: auto;
-  color: #fff;
-  background: #fff;
-  border-bottom: 2px solid #ccc;
-}
-
-#logo {
-  float: left;
-  width: 250px;
-  height: 90px;
-  font-family: Georgia, Times, "Times New Roman", serif;
-  font-size: 30px;
-  font-weight: 700;
-  line-height: 90px;
-  color: #fff;
+  font-weight: bold;  
+  line-height: 98px;
+  color: #ffffff;
   text-align: center;
+}
+
+.header-nav-box {
+  flex: 1;
+  width: 100%;
+  height: 75px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background: white;
+}
+
+.nav-flex-box {
+  flex: 1;
+  height: 100%;
+}
+
+.nav-link-box {
+  display: flex;
+  flex-direction: row;
+  align-content: space-between;
+}
+
+.nav-link-box>a{
+  border-right: 1px solid #cccccc;
+  padding-left: 20px;
+  padding-right: 20px;
+  width: 100%;
+  color: #777777;
   text-decoration: none;
-  background: #4aaaa5;
-}
-
-nav {
-  float: right;
-  margin-top: 25px;
-}
-
-nav a {
-  display: inline-block;
-  padding-left: 15px;
-  margin-left: 15px;
-  line-height: 18px;
-  color: #999;
-  text-decoration: none;
-  border-left: 1px solid #efefef;
-}
-
-nav a:first-child {
-  border-left: 0 none;
-}
-
-/* footer */
-
-footer {
-  padding: 30px 0;
-  clear: both;
-  font-size: 12px;
-  color: #fff;
-  color: #ccc;
   text-align: center;
-  background: #666;
-  border-top: 8px solid #4aaaa5;
 }
 
-/* sidebar */
-
-.sidebar {
-  float: right;
-  width: 100%;
-  max-width: 270px;
-  padding: 30px;
-  margin-bottom: 20px;
-  background: #fff;
-  border: 1px solid #ddd;
+.nav-link-box>a:first-child {
+  padding-left: 0px;
 }
 
-h3,
-.sidebar h2 {
-  padding-bottom: 20px;
-  margin-bottom: 15px;
-  line-height: 22px;
-  border-bottom: 2px solid #eee;
+.nav-link-box>a:last-child{
+  border: none;
+  padding-right: 0px;
 }
 
-.social {
-  width: 62px;
-  height: 62px;
-  margin-top: 8px;
-  margin-right: 5px;
+body>.container {
+  padding-top: 30px;
+  flex: 1;
+  display: flex;
+  flex-direction: row;
 }
 
-.social:last-child {
-  margin-right: 0;
+.content-wrap {
+  flex: 1;
+  background-color: #ffffff;
+  padding: 30px 40px 30px 40px;
+  border: solid #cccccc 1px;
+  line-height: 150%;
+  margin-bottom: 30px;
 }
 
-/* main */
-
-#main-container {
-  padding-top: 130px;
+.content-heading {
+  padding-bottom: 25px;
+  margin-bottom: 30px;
+  border-bottom: solid #cccccc 2px;
 }
 
-.main-section {
-  float: left;
-  width: 100%;
-  max-width: 650px;
-  padding: 30px;
-  margin: 0 0 40px;
-  background: #fff;
-  border: 1px solid #ddd;
-}
-
-/* portfolio page */
-
-.work {
-  position: relative;
-  float: left;
-  width: 274px;
-  margin: 20px 0 25px;
-  overflow: auto;
-}
-
-.work:nth-child(even) {
-  margin-right: 40px;
-}
-
-.work img {
-  width: 100%;
-  border: 0 none;
-  opacity: 0.8;
-}
-
-.work h3 {
-  position: absolute;
-  bottom: 20px;
-  width: 100%;
-  padding: 15px;
-  margin-bottom: 0;
-  font-weight: 300;
-  line-height: 30px;
-  color: #fff;
-  text-align: center;
-  background: #4aaaa5;
-  border-bottom: 0;
-}
-
-.auth-image {
-  float: left;
-  width: 200px;
+#aboutPhoto {
+  width: 33.33%;
   height: auto;
-  margin-top: 10px;
-  margin-right: 25px;
+  float: left;
+  margin-right: 20px;
 }
 
-/* contact page */
-
-#contact-form ul {
-  margin-bottom: 20px;
+.connect-wrap {
+  background-color: #ffffff;
+  padding: 25px;
+  border: solid #cccccc 1px;
+  margin: 0px 0px 30px 30px;
+  height: 190px;
 }
 
-#contact-form li {
-  margin-bottom: 10px;
+.connect-icon {
+  width: 65px;
+  height: 65px;
+  margin: 0px 5px 0px 5px;
 }
 
-label,
-input[type=text],
-input[type=email],
-textarea {
-  display: block;
+.connect-heading {
+  margin-bottom: 25px;
+  padding-bottom: 20px;
+  border-bottom: solid #cccccc 1px;
+  line-height: 100%;
+}
+
+.portfolio-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
+
+.portfolio-box {
+  position: relative;
+  z-index: 1;
+  width: 48%;
+}
+
+.portfolio-img {
   width: 100%;
 }
 
-input[type=text],
-input[type=email],
-textarea {
-  height: 35px;
-  padding: 0 10px;
-  font-size: 14px;
-  border: 1px solid #ddd;
+.portfolio-text-box {
+  position: absolute;
+  top: 65%;
+  left: 0;
+  z-index: 2;
+  width: 100%;
+  height: 25%;
+  background-color: #4aaaa5;
 }
 
-textarea {
+.portfolio-text {
+  color: white;
+  line-height: 210%;
+  text-align: center;
+  font-family: 'Georgia', Times, Times New Roman, serif;
+  font-size: 125%;
+}
+
+.portfolio-bottom-row {
+  margin-bottom: 0px;
+}
+
+.portfolio-img {
+  width: 100%;
+}
+
+.form-text {
+  font-size: 20px;
+  margin-bottom: 0px;
+}
+
+.form-input {
+  height: 30px;
+  width: 100%;
+  padding-left: 10px;
+  margin:5px 0px 15px 0px;s
+}
+
+.form-textarea {
   height: 200px;
 }
 
-input[type=submit] {
-  padding: 10px 30px;
-  font-size: 18px;
-  color: #fff;
-  cursor: pointer;
-  background: #4aaaa5;
-  border: 0 none;
+.form-button {
+  background-color: #4aaaa5;
+  color: white;
+  border: 0;
+  height: 45px;
+  width: 125px;
+  text-align: center;
+  font-size: 20px;
+}
+
+.footer {
+  width: 100%;
+  height: 100px;
+  text-align: center;
+  line-height: 95px;
+  font-size: 12px;
+  color: #d3d3d3;
+  background-color: #666666;
+  border-top: solid #4aaaa5 5px;
+}
+
+@media screen and (min-width: 769px) and (max-width:980px) {
+  #aboutPhoto {
+    min-width: 100%;
+    margin: 0px 0px 20px 0px;
+  }
+  .portfolio-row {
+    flex-direction: column;
+  }
+  .portfolio-box {
+    min-width:100%;
+  }
+  .portfolio-text {
+    line-height: 200%;
+    font-size: 3vw;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  body>.container {
+    flex-direction: column;
+  }
+  .connect-wrap {
+    margin-left: 0px;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .header-wrap>.container {
+    flex-direction: column;
+    width:100%;
+  }
+  .header-name-box {
+    width: 100%;
+  }
+  .nav-flex-box {
+    flex: 0;
+  }
+  .nav-link-box {
+    flex: 1;
+  }
+  #aboutPhoto {
+    min-width: 100%;
+    margin: 0px 0px 20px 0px;
+  }
+  .portfolio-row {
+    flex-direction: column;
+  }
+  .portfolio-box {
+    min-width:100%;
+  }
+  .portfolio-text {
+    line-height: 210%;
+    font-size: 4.5vw;
+  }
 }
